<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="20dp"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="5dp"
                android:src="@drawable/ic_chevron_left_32"
                android:tint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro_display_medium"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPadding="10dp">

            </TextView>


        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:src="@drawable/user2" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/tv_seal_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="@string/app_name" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:text="@string/app_name">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/back_color"
                android:fontFamily="@font/sf_pro_display_medium"
                android:paddingVertical="12dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>